--- a/employees.html
+++ b/employees.html
@@ -123,7 +123,7 @@
 
     <div class="add_employee_form">
         <form action="#" id="modal_content2">
-            <h1 class="add_employee_header">Add Employee</h1>
+            <h1 class="add_employee_header">ADD EMPLOYEE</h1>
             <div class="element">
                 <label for="names">Name</label>
                 <input type="text" value="" spellcheck="false" placeholder="" id="names">
