--- a/rooms.html
+++ b/rooms.html
@@ -116,13 +116,13 @@
         </div>
     </div>
 
-    <!-- CONTENT EMPLOYEES START-->
+    <!-- CONTENT ROOMS START-->
 
-    <!-- ADD EMPLOYEE FORM -->
+    <!-- ADD ROOM FORM -->
 
     <div class="add_room_form">
         <form action="#" id="modal_content3">
-            <h1 class="add_room_header">Add Room</h1>
+            <h1 class="add_room_header">ADD ROOM</h1>
             <div class="element">
                 <label for="namer">Name</label>
                 <input type="text" value="" spellcheck="false" placeholder="" id="namer" required>
@@ -181,7 +181,8 @@
                 <div class="value">Single</div>
                 <div class="value">€20</div>
                 <div class="value">empty</div>
-                <div class="value center edit"><button class="editRoomBtn"><i class="fas fa-pen"></i></button></div>
+                <div class="value center edit"><a href="edit-room.html" class="editRoomBtn"><i
+                            class="fas fa-pen"></i></a></div>
             </div>
             <hr>
         </div>
