--- a/edit-room.html
+++ b/edit-room.html
@@ -42,7 +42,7 @@
     <!-- SETTINGS FORM -->
     <div class="settings_form">
         <form action="dashboard.html" id="modal_content">
-            <h1 class="settings_header">Account Settings</h1>
+            <h1 class="settings_header">ACCOUNT SETTINGS</h1>
             <div class="element">
                 <label for="name">Full Name</label>
                 <input type="text" value="Alex Popescu" spellcheck="false" placeholder="" id="name" required>
