--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,7 @@
             </div>
             <div class="element">
                 <label for="email">Email</label>
-                <input type="email" value="alex@contintental.com" spellcheck="false" placeholder="" id="email" required>
+                <input type="email" value="alex@continental.com" spellcheck="false" placeholder="" id="email" required>
             </div>
             <div class="element">
                 <label for="phone1">Phone Number</label>
