login page modified

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body class="login">
-
     <form class="box" action="dashboard.html">
+        <img src="assets/img/logo_simplu.png" id="mark" alt="logo">
         <h1>Admin Login</h1>
+        <!-- <p>*Invalid Email or Password</p> -->
         <input type="email" name="" placeholder="Email" spellcheck="false">
         <input type="password" name="" placeholder="Password">
         <input type="submit" name="" value="Login">
