--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="assets/js/chart-rooms.js"></script>
     <script type="text/javascript" src="assets/js/chart-earnings.js"></script>
-    <title>Contintental - Admin Panel</title>
+    <link rel="icon" type="image/png" href="assets/img/favicon.png" />
+    <title>Continental - Admin Panel</title>
 </head>
 
 <body>
@@ -37,46 +38,11 @@
             <img src="assets/img/logo_continental_2.png" alt="logo">
         </div>
         <div class="nav__right">
-            <button class="settings"><i class="fas fa-cog"></i></button>
+            <a href="settings.html" class="settings"><i class="fas fa-cog"></i></a>
             <a href="index.html" class="logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
 
-    <!-- SETTINGS FORM -->
-    <div class="settings_form">
-        <form action="dashboard.html" id="modal_content">
-            <h1 class="settings_header">ACCOUNT SETTINGS</h1>
-            <div class="element">
-                <label for="name">Full Name</label>
-                <input type="text" value="Alex Popescu" spellcheck="false" placeholder="" id="name" required>
-            </div>
-            <div class="element">
-                <label for="email">Email</label>
-                <input type="email" value="alex@continental.com" spellcheck="false" placeholder="" id="email" required>
-            </div>
-            <div class="element">
-                <label for="phone1">Phone Number</label>
-                <input type="tel" pattern="[\d\+]{10,15}" required value="0733747474" spellcheck="false" placeholder=""
-                    id="phone1">
-            </div>
-            <div class="element">
-                <label for="password1">Password</label>
-                <input type="password" spellcheck="false" placeholder="" id="password1" required>
-            </div>
-            <div class="element">
-                <label for="password2">New Password</label>
-                <input type="password" spellcheck="false" placeholder="" id="password2">
-            </div>
-            <div class="element">
-                <label for="password3">Repeat New Password</label>
-                <input type="password" spellcheck="false" placeholder="" id="password3">
-            </div>
-            <div class="settings_footer">
-                <button class="cancelBtn" form="">Cancel</button>
-                <button type="update" form="modal_content" value="Submit">Update</button>
-            </div>
-        </form>
-    </div>
 
     <!-- SIDEBAR -->
     <div class="sidebar">
@@ -113,6 +79,11 @@
                 <li>
                     <a href="emails.html">
                         <div class="selector"></div><i class="fas fa-envelope"></i>Emails
+                    </a>
+                </li>
+                <li class="mobile-only">
+                    <a href="settings.html">
+                        <div class="selector"></div><i class="fas fa-cog"></i>Settings
                     </a>
                 </li>
             </ul>
