--- a/settings.html
+++ b/settings.html
@@ -67,7 +67,7 @@
                         <div class="selector"></div><i class="fas fa-door-open"></i>Rooms
                     </a>
                 </li>
-                <li class="actual">
+                <li>
                     <a href="reservations.html">
                         <div class="selector"></div><i class="far fa-calendar-alt"></i>Reservations
                     </a>
@@ -77,7 +77,7 @@
                         <div class="selector"></div><i class="fas fa-envelope"></i>Emails
                     </a>
                 </li>
-                <li class="mobile-only">
+                <li class="mobile-only actual">
                     <a href="settings.html">
                         <div class="selector"></div><i class="fas fa-cog"></i>Settings
                     </a>
@@ -86,89 +86,66 @@
         </div>
     </div>
 
-    <!-- CONTENT RESERVATIONS START-->
-
+    <!-- CONTENT SETTINGS START-->
     <div class="content">
-        <div class="reservations">
-            <div class="header">
-                <div class="label">RESERVATIONS DETAILS</div>
-                <hr>
-                <div class="table-header">
-                    <div class="parameter center"></div>
-                    <div class="parameter">NAME</div>
-                    <div class="parameter">ROOM</div>
-                    <div class="parameter">PRICE</div>
-                    <div class="parameter">DATE</div>
+
+        <!-- EDIT EMPLOYEE FORM -->
+
+        <div class="settings_forms">
+            <h1 class="edit_employee_header">ACCOUNT SETTINGS</h1>
+            <hr>
+            <form action="#" id="settings_form_1">
+                <div class="subtitle1">Change Details</div>
+                <div class="element">
+                    <!-- <label for="names">Name</label> -->
+                    <input type="text" value="" spellcheck="false" placeholder="Name" id="names" required>
                 </div>
-            </div>
-            <hr>
+                <div class="element">
+                    <!-- <label for="phone">Phone</label> -->
+                    <input type="tel" pattern="[\d\+]{10,15}" value="" spellcheck="false" placeholder="Phone Number"
+                        id="phone" required>
+                </div>
+                <div class="element">
+                    <!-- <label for="emails">Email</label> -->
+                    <input type="email" value="" spellcheck="false" placeholder="Email" id="emails" required>
+                </div>
 
-            <div class="table-row">
-                <div class="value center user"><i class="far fa-calendar-check"></i></div>
-                <div class="value  name">Andrei Bogdan</div>
-                <div class="value">Room 2.1</div>
-                <div class="value">€150</div>
-                <div class="value short">01.05.2021 - 02.05.2021</div>
-            </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="far fa-calendar-check"></i></div>
-                <div class="value  name">Andrei Bogdan</div>
-                <div class="value">Room 2.1</div>
-                <div class="value">€150</div>
-                <div class="value short">01.05.2021 - 02.05.2021</div>
-            </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="far fa-calendar-check"></i></div>
-                <div class="value  name">Andrei Bogdan</div>
-                <div class="value">Room 2.1</div>
-                <div class="value">€150</div>
-                <div class="value short">01.05.2021 - 02.05.2021</div>
-            </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="far fa-calendar-check"></i></div>
-                <div class="value  name">Andrei Bogdan</div>
-                <div class="value">Room 2.1</div>
-                <div class="value">€150</div>
-                <div class="value short">01.05.2021 - 02.05.2021</div>
-            </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="far fa-calendar-check"></i></div>
-                <div class="value  name">Andrei Bogdan</div>
-                <div class="value">Room 2.1</div>
-                <div class="value">€150</div>
-                <div class="value short">01.05.2021 - 02.05.2021</div>
-            </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="far fa-calendar-check"></i></div>
-                <div class="value  name">Andrei Bogdan</div>
-                <div class="value">Room 2.1</div>
-                <div class="value">€150</div>
-                <div class="value short">01.05.2021 - 02.05.2021</div>
-            </div>
-            <hr>
-            <div class="table-row">
-                <div class="value center user"><i class="far fa-calendar-check"></i></div>
-                <div class="value  name">Andrei Bogdan</div>
-                <div class="value">Room 2.1</div>
-                <div class="value">€150</div>
-                <div class="value short">01.05.2021 - 02.05.2021</div>
-            </div>
-            <hr>
+                <div class="edit_employee_footer">
+                    <!-- <button class="cancelBtn2" form="">Cancel</button> -->
+                    <button type="update" form="settings_form_1" value="Submit">Update</button>
+                </div>
+            </form>
+            <form action="#" id="settings_form_2">
+                <div class="subtitle1">Change Password</div>
+                <div class="element">
+                    <!-- <label for="passwords">Password</label> -->
+                    <input type="password" spellcheck="false" placeholder="Old Password" id="passwords" required>
+                </div>
+                <div class="element">
+                    <!-- <label for="passwords">Password</label> -->
+                    <input type="password" spellcheck="false" placeholder="New Password" id="passwords" required>
+                </div>
+                <div class="element">
+                    <!-- <label for="passwords">Password</label> -->
+                    <input type="password" spellcheck="false" placeholder="Confirm New Password" id="passwords"
+                        required>
+                </div>
 
+                <div class="edit_employee_footer">
+                    <!-- <button class="cancelBtn2" form="">Cancel</button> -->
+                    <button type="update" form="settings_form_2" value="Submit">Update</button>
+                </div>
+            </form>
+            <a href="" id="delete-button">Delete Account</a>
         </div>
-
         <footer>Continental &copy; 2021</footer>
     </div>
 
-    <!-- CONTENT RESERVATIONS END -->
+    <!-- CONTENT SETTINGS END -->
 
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/employees.js"></script>
 </body>
 
 </html>
