--- a/room-type.html
+++ b/room-type.html
@@ -123,7 +123,7 @@
             </div>
             <hr>
             <div class="edit_room_footer">
-                <!-- <button class="cancelBtn2" form="">Cancel</button> -->
+                <!-- <a href="" class="delete-room-type">Delete Type</a> -->
                 <button type="submit" form="room-type">Add</button>
             </div>
         </form>
