--- a/cleaning-rooms.html
+++ b/cleaning-rooms.html
@@ -86,7 +86,7 @@
                 <div class="value center user"><i class="fas fa-door-open"></i></div>
                 <div class="value  name">Room 0.0</div>
                 <div class="value">Single</div>
-                <div class="value start"><a href="" class="start-button">Start Cleaning</a></div>
+                <div class="value start"><a href="" class="finish-button">Finish Cleaning</a></div>
                 <!-- <div class="value center edit"><a href="" class="finish-button">Finish Cleaning</a></div> -->
             </div>
             <hr>
